--- a/src/index.html
+++ b/src/index.html
@@ -38,21 +38,42 @@
             </button>
         </header>
         <div class="container">
-            <div class="main__text">
-                <h1 class="title title_block">
-                    Здоровая еда -
-                    <span class="title__span">это просто!</span>
-                </h1>
-                <div class="main__item">
-                    <p class="description description_size-s">
-                        Сеть магазинов полезных продуктов питания, производство которых основано на&nbsp;принципах и стандартах органического чистых продуктов
-                    </p>
-                    <div class="main__link">
-                        <a href="#" class="link">Перейти в каталог</a>
+            <div class="main__flex">
+                <div class="main__text">
+                    <h1 class="title title_block">
+                        Здоровая еда -
+                        <span class="title__span">это просто!</span>
+                    </h1>
+                    <div class="main__item">
+                        <p class="description description_size-s">
+                            Сеть магазинов полезных продуктов питания, производство которых основано на&nbsp;принципах и стандартах органического чистых продуктов
+                        </p>
+                        <div class="main__link">
+                            <a href="#" class="link">Перейти в каталог</a>
+                        </div>
                     </div>
+                </div>
+                <div class="main__cover">
+                    <div class="main__line">
+                        <img class="main__image" src="images/plate.png" alt="">
+                    </div>
+                    <button class="main__btn main__btn_1" type="button">
+                        <span class="main__food">Авокадо</span> 134 руб
+                    </button>
+                    <button class="main__btn main__btn_2" type="button">
+                        <span class="main__food">Картофель</span> 169 руб
+                    </button>
+                    <button class="main__btn main__btn_3" type="button">
+                        <span class="main__food">Томаты</span> 215 руб
+                    </button>
                 </div>
             </div>
         </div>
+        <img class="main__tomato" src="images/tomato.png" alt="">
+        <img class="main__avocado" src="images/avocado.png" alt="">
+        <img class="main__cucumber" src="images/cucumber.png" alt="">
+        <img class="main__pepper" src="images/pepper.png" alt="">
+        <img class="main__olives" src="images/olives.png" alt="">
     </div>
 </body>
 </html>
