--- a/src/index.html
+++ b/src/index.html
@@ -75,5 +75,60 @@
         <img class="main__pepper" src="images/pepper.png" alt="">
         <img class="main__olives" src="images/olives.png" alt="">
     </div>
+    <section class="offer">
+        <div class="container">
+            <h1 class="title title_block">
+                Что мы
+                <span class="title__span">предлагаем</span>
+            </h1>
+            <div class="offer__text">
+                <p class="description description_size-m">
+                    Органика — это целостная система производства по-настоящему чистой, натуральной и полезной продукции
+                </p>
+            </div>
+            <div class="offer__slider">
+                <div class="swiper offerSwiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <h3 class="swiper-slide__title">
+                                Молочные продукты
+                            </h3>
+                            <p class="swiper-slide__text">
+                                В наши дни появилась мода на здоровое питание, поэтому на рынке питания разработали органическое молоко. Органическое молоко является продуктом органического животноводства
+                            </p>
+                            <a href="#">Подробнее</a>
+                        </div>
+                        <div class="swiper-slide">
+                            <h3 class="swiper-slide__title">
+                                Бакалея
+                            </h3>
+                            <p class="swiper-slide__text">
+                                В наши дни появилась мода на здоровое питание, поэтому на рынке питания разработали органическое молоко. Органическое молоко является продуктом органического животноводства
+                            </p>
+                            <a href="#">Подробнее</a>
+                        </div>
+                        <div class="swiper-slide">
+                            <h3 class="swiper-slide__title">
+                                Мясо, птица
+                            </h3>
+                            <p class="swiper-slide__text">
+                                В наши дни появилась мода на здоровое питание, поэтому на рынке питания разработали органическое молоко. Органическое молоко является продуктом органического животноводства
+                            </p>
+                            <a href="#">Подробнее</a>
+                        </div>
+                        <div class="swiper-slide">Slide 4</div>
+                        <div class="swiper-slide">Slide 5</div>
+                        <div class="swiper-slide">Slide 6</div>
+                        <div class="swiper-slide">Slide 7</div>
+                        <div class="swiper-slide">Slide 8</div>
+                        <div class="swiper-slide">Slide 9</div>
+                    </div>
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-pagination"></div>
+                  </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
