--- a/src/index.html
+++ b/src/index.html
@@ -86,42 +86,200 @@
                     Органика — это целостная система производства по-настоящему чистой, натуральной и полезной продукции
                 </p>
             </div>
-            <div class="offer__slider">
+            <div class="slider">
                 <div class="swiper offerSwiper">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide">
+                        <div class="swiper-slide swiper-slide_white swiper-slide_milk">
                             <h3 class="swiper-slide__title">
                                 Молочные продукты
                             </h3>
-                            <p class="swiper-slide__text">
-                                В наши дни появилась мода на здоровое питание, поэтому на рынке питания разработали органическое молоко. Органическое молоко является продуктом органического животноводства
-                            </p>
-                            <a href="#">Подробнее</a>
+                            <div class="swiper-slide__hover">
+                                <p class="swiper-slide__text">
+                                    В наши дни появилась мода на&nbsp;здоровое питание, поэтому на&nbsp;рынке питания разработали органическое молоко. Органическое молоко является продуктом органического животноводства
+                                </p>
+                                <a href="#" class="swiper-slide__link">Подробнее</a>
+                            </div>
                         </div>
-                        <div class="swiper-slide">
+                        <div class="swiper-slide swiper-slide_white swiper-slide_pasta">
                             <h3 class="swiper-slide__title">
                                 Бакалея
                             </h3>
-                            <p class="swiper-slide__text">
-                                В наши дни появилась мода на здоровое питание, поэтому на рынке питания разработали органическое молоко. Органическое молоко является продуктом органического животноводства
-                            </p>
-                            <a href="#">Подробнее</a>
+                            <div class="swiper-slide__hover">
+                                <p class="swiper-slide__text">
+                                    В наши дни появилась мода на&nbsp;здоровое питание, поэтому на&nbsp;рынке питания разработали органическое молоко. Органическое молоко является продуктом органического животноводства
+                                </p>
+                                <a href="#" class="swiper-slide__link">Подробнее</a>
+                            </div>
+                        </div>
+                        <div class="swiper-slide swiper-slide_white swiper-slide_steaks">
+                            <h3 class="swiper-slide__title">
+                                Мясо, птица
+                            </h3>
+                            <div class="swiper-slide__hover">
+                                <p class="swiper-slide__text">
+                                    В наши дни появилась мода на&nbsp;здоровое питание, поэтому на&nbsp;рынке питания разработали органическое молоко. Органическое молоко является продуктом органического животноводства
+                                </p>
+                                <a href="#" class="swiper-slide__link">Подробнее</a>
+                            </div>
                         </div>
                         <div class="swiper-slide">
                             <h3 class="swiper-slide__title">
                                 Мясо, птица
                             </h3>
-                            <p class="swiper-slide__text">
-                                В наши дни появилась мода на здоровое питание, поэтому на рынке питания разработали органическое молоко. Органическое молоко является продуктом органического животноводства
-                            </p>
-                            <a href="#">Подробнее</a>
+                            <div class="swiper-slide__hover">
+                                <p class="swiper-slide__text">
+                                    В наши дни появилась мода на&nbsp;здоровое питание, поэтому на&nbsp;рынке питания разработали органическое молоко. Органическое молоко является продуктом органического животноводства
+                                </p>
+                                <a href="#" class="swiper-slide__link">Подробнее</a>
+                            </div>
                         </div>
-                        <div class="swiper-slide">Slide 4</div>
-                        <div class="swiper-slide">Slide 5</div>
-                        <div class="swiper-slide">Slide 6</div>
-                        <div class="swiper-slide">Slide 7</div>
-                        <div class="swiper-slide">Slide 8</div>
-                        <div class="swiper-slide">Slide 9</div>
+                        <div class="swiper-slide">
+                            <h3 class="swiper-slide__title">
+                                Мясо, птица
+                            </h3>
+                            <div class="swiper-slide__hover">
+                                <p class="swiper-slide__text">
+                                    В наши дни появилась мода на&nbsp;здоровое питание, поэтому на&nbsp;рынке питания разработали органическое молоко. Органическое молоко является продуктом органического животноводства
+                                </p>
+                                <a href="#" class="swiper-slide__link">Подробнее</a>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <h3 class="swiper-slide__title">
+                                Мясо, птица
+                            </h3>
+                            <div class="swiper-slide__hover">
+                                <p class="swiper-slide__text">
+                                    В наши дни появилась мода на&nbsp;здоровое питание, поэтому на&nbsp;рынке питания разработали органическое молоко. Органическое молоко является продуктом органического животноводства
+                                </p>
+                                <a href="#" class="swiper-slide__link">Подробнее</a>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <h3 class="swiper-slide__title">
+                                Мясо, птица
+                            </h3>
+                            <div class="swiper-slide__hover">
+                                <p class="swiper-slide__text">
+                                    В наши дни появилась мода на&nbsp;здоровое питание, поэтому на&nbsp;рынке питания разработали органическое молоко. Органическое молоко является продуктом органического животноводства
+                                </p>
+                                <a href="#" class="swiper-slide__link">Подробнее</a>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <h3 class="swiper-slide__title">
+                                Мясо, птица
+                            </h3>
+                            <div class="swiper-slide__hover">
+                                <p class="swiper-slide__text">
+                                    В наши дни появилась мода на&nbsp;здоровое питание, поэтому на&nbsp;рынке питания разработали органическое молоко. Органическое молоко является продуктом органического животноводства
+                                </p>
+                                <a href="#" class="swiper-slide__link">Подробнее</a>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <h3 class="swiper-slide__title">
+                                Мясо, птица
+                            </h3>
+                            <div class="swiper-slide__hover">
+                                <p class="swiper-slide__text">
+                                    В наши дни появилась мода на&nbsp;здоровое питание, поэтому на&nbsp;рынке питания разработали органическое молоко. Органическое молоко является продуктом органического животноводства
+                                </p>
+                                <a href="#" class="swiper-slide__link">Подробнее</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-pagination"></div>
+                  </div>
+            </div>
+        </div>
+    </section>
+    <section class="about">
+        <div class="container">
+            <h1 class="title title_block">
+                В чем наша
+                <span class="title__span">уникальность</span>
+            </h1>
+            <div class="about__box">
+                <div class="about__text">
+                    <p class="description description_size-s">
+                        Мы полностью контролируем весь цикл производства – от поля до прилавка за счет собственной серьезной материальной и научной базы. Наш подход направлен на высокие технологии и достижения научного прогресса
+                    </p>
+                </div>
+                <ul class="about__list">
+                    <li class="about__item">
+                        Здоровье
+                    </li>
+                    <li class="about__item">
+                        Традиции
+                    </li>
+                    <li class="about__item">
+                        Вкус
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <section class="trends">
+        <div class="container">
+            <h1 class="title">
+                Наши
+                <span class="title__span">новинки</span>
+            </h1>
+            <div class="trends__text">
+                <p class="description description_size-m">
+                    Будь в тренде с современым миром, и будь здоров вместе с нами
+                </p>
+            </div>
+            <div class="slider">
+                <div class="swiper trendsSwiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="swiper-slide__cover">
+                                <img class="swiper-slide__image" src="images/catalog/milk.png" alt="">
+                            </div>
+                            <h3 class="swiper-slide__title">
+                                Молоко топленое
+                            </h3>
+                            <p class="swiper-slide__description">
+                                Молоко Healthy food топленеое мдж 4%	500гр
+                            </p>
+                            <p class="swiper-slide__price">
+                                159 руб/шт
+                            </p>
+                            <div class="swiper-slide__footer">
+                                <div class="counter">
+                                    <button class="counter__btn counter__minus"></button>
+                                    <input class="counter__input" type="text" value="0">
+                                    <button class="counter__btn counter__plus"></button>
+                                </div>
+                                <a href="#" class="link">в корзину</a>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <h3 class="swiper-slide__title">
+                                Бакалея
+                            </h3>
+                            <div class="swiper-slide__hover">
+                                <p class="swiper-slide__text">
+                                    В наши дни появилась мода на&nbsp;здоровое питание, поэтому на&nbsp;рынке питания разработали органическое молоко. Органическое молоко является продуктом органического животноводства
+                                </p>
+                                <a href="#" class="swiper-slide__link">Подробнее</a>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <h3 class="swiper-slide__title">
+                                Мясо, птица
+                            </h3>
+                            <div class="swiper-slide__hover">
+                                <p class="swiper-slide__text">
+                                    В наши дни появилась мода на&nbsp;здоровое питание, поэтому на&nbsp;рынке питания разработали органическое молоко. Органическое молоко является продуктом органического животноводства
+                                </p>
+                                <a href="#" class="swiper-slide__link">Подробнее</a>
+                            </div>
+                        </div>
                     </div>
                     <div class="swiper-button-next"></div>
                     <div class="swiper-button-prev"></div>
