--- a/src/index.html
+++ b/src/index.html
@@ -255,7 +255,7 @@
                                     <input class="counter__input" type="text" value="0">
                                     <button class="counter__btn counter__plus"></button>
                                 </div>
-                                <a href="#" class="link">в корзину</a>
+                                <a href="#" class="link link_max">в корзину</a>
                             </div>
                         </div>
                         <div class="swiper-slide">
@@ -285,6 +285,257 @@
                     <div class="swiper-button-prev"></div>
                     <div class="swiper-pagination"></div>
                   </div>
+            </div>
+        </div>
+    </section>
+    <main class="catalog">
+        <div class="container">
+            <h1 class="title">
+                Каталог
+            </h1>
+            <div class="trends__text">
+                <p class="description description_size-m">
+                    Еда которая заботится о вашей фигуре
+                </p>
+            </div>
+            <ul class="category catalog__list">
+                <li class="category__item">
+                    <a class="category__link" href="">Молочные продукты</a>
+                </li>
+                <li class="category__item">
+                    <a class="category__link" href="">Бакалея</a>
+                </li>
+                <li class="category__item">
+                    <a class="category__link" href="">Мясо, птица</a>
+                </li>
+                <li class="category__item">
+                    <a class="category__link" href="">Детям</a>
+                </li>
+                <li class="category__item">
+                    <a class="category__link" href="">Овощи и фрукты</a>
+                </li>
+            </ul>
+            <div class="catalog-grid">
+                <div class="catalog-grid__item">
+                    <div class="catalog-grid__cover">
+                        <img class="catalog-grid__image" src="images/catalog/milk.png" alt="">
+                    </div>
+                    <h3 class="catalog-grid__title">
+                        Молоко топленое
+                    </h3>
+                    <p class="catalog-grid__description">
+                        Молоко Healthy food топленеое мдж&nbsp;4%&nbsp;500гр
+                    </p>
+                    <p class="catalog-grid__price">
+                        159 руб/шт
+                    </p>
+                    <div class="catalog-grid__footer">
+                        <div class="counter">
+                            <button class="counter__btn counter__btn_min counter__minus"></button>
+                            <input class="counter__input counter__input_min" type="text" value="0">
+                            <button class="counter__btn counter__btn_min counter__plus"></button>
+                        </div>
+                        <a href="#" class="link link_min">В корзину</a>
+                    </div>
+                </div>
+                <div class="catalog-grid__item">
+                    <div class="catalog-grid__cover">
+                        <img class="catalog-grid__image" src="images/catalog/milk.png" alt="">
+                    </div>
+                    <h3 class="catalog-grid__title">
+                        Молоко топленое
+                    </h3>
+                    <p class="catalog-grid__description">
+                        Молоко Healthy food топленеое мдж&nbsp;4%&nbsp;500гр
+                    </p>
+                    <p class="catalog-grid__price">
+                        159 руб/шт
+                    </p>
+                    <div class="catalog-grid__footer">
+                        <div class="counter">
+                            <button class="counter__btn counter__btn_min counter__minus"></button>
+                            <input class="counter__input counter__input_min" type="text" value="0">
+                            <button class="counter__btn counter__btn_min counter__plus"></button>
+                        </div>
+                        <a href="#" class="link link_min">В корзину</a>
+                    </div>
+                </div>
+                <div class="catalog-grid__item">
+                    <div class="catalog-grid__cover">
+                        <img class="catalog-grid__image" src="images/catalog/milk.png" alt="">
+                    </div>
+                    <h3 class="catalog-grid__title">
+                        Молоко топленое
+                    </h3>
+                    <p class="catalog-grid__description">
+                        Молоко Healthy food топленеое мдж&nbsp;4%&nbsp;500гр
+                    </p>
+                    <p class="catalog-grid__price">
+                        159 руб/шт
+                    </p>
+                    <div class="catalog-grid__footer">
+                        <div class="counter">
+                            <button class="counter__btn counter__btn_min counter__minus"></button>
+                            <input class="counter__input counter__input_min" type="text" value="0">
+                            <button class="counter__btn counter__btn_min counter__plus"></button>
+                        </div>
+                        <a href="#" class="link link_min">В корзину</a>
+                    </div>
+                </div>
+                <div class="catalog-grid__item">
+                    <div class="catalog-grid__cover">
+                        <img class="catalog-grid__image" src="images/catalog/milk.png" alt="">
+                    </div>
+                    <h3 class="catalog-grid__title">
+                        Молоко топленое
+                    </h3>
+                    <p class="catalog-grid__description">
+                        Молоко Healthy food топленеое мдж&nbsp;4%&nbsp;500гр
+                    </p>
+                    <p class="catalog-grid__price">
+                        159 руб/шт
+                    </p>
+                    <div class="catalog-grid__footer">
+                        <div class="counter">
+                            <button class="counter__btn counter__btn_min counter__minus"></button>
+                            <input class="counter__input counter__input_min" type="text" value="0">
+                            <button class="counter__btn counter__btn_min counter__plus"></button>
+                        </div>
+                        <a href="#" class="link link_min">В корзину</a>
+                    </div>
+                </div>
+                <div class="catalog-grid__item">
+                    <div class="catalog-grid__cover">
+                        <img class="catalog-grid__image" src="images/catalog/milk.png" alt="">
+                    </div>
+                    <h3 class="catalog-grid__title">
+                        Молоко топленое
+                    </h3>
+                    <p class="catalog-grid__description">
+                        Молоко Healthy food топленеое мдж&nbsp;4%&nbsp;500гр
+                    </p>
+                    <p class="catalog-grid__price">
+                        159 руб/шт
+                    </p>
+                    <div class="catalog-grid__footer">
+                        <div class="counter">
+                            <button class="counter__btn counter__btn_min counter__minus"></button>
+                            <input class="counter__input counter__input_min" type="text" value="0">
+                            <button class="counter__btn counter__btn_min counter__plus"></button>
+                        </div>
+                        <a href="#" class="link link_min">В корзину</a>
+                    </div>
+                </div>
+                <div class="catalog-grid__item">
+                    <div class="catalog-grid__cover">
+                        <img class="catalog-grid__image" src="images/catalog/milk.png" alt="">
+                    </div>
+                    <h3 class="catalog-grid__title">
+                        Молоко топленое
+                    </h3>
+                    <p class="catalog-grid__description">
+                        Молоко Healthy food топленеое мдж&nbsp;4%&nbsp;500гр
+                    </p>
+                    <p class="catalog-grid__price">
+                        159 руб/шт
+                    </p>
+                    <div class="catalog-grid__footer">
+                        <div class="counter">
+                            <button class="counter__btn counter__btn_min counter__minus"></button>
+                            <input class="counter__input counter__input_min" type="text" value="0">
+                            <button class="counter__btn counter__btn_min counter__plus"></button>
+                        </div>
+                        <a href="#" class="link link_min">В корзину</a>
+                    </div>
+                </div>
+                <div class="catalog-grid__item">
+                    <div class="catalog-grid__cover">
+                        <img class="catalog-grid__image" src="images/catalog/milk.png" alt="">
+                    </div>
+                    <h3 class="catalog-grid__title">
+                        Молоко топленое
+                    </h3>
+                    <p class="catalog-grid__description">
+                        Молоко Healthy food топленеое мдж&nbsp;4%&nbsp;500гр
+                    </p>
+                    <p class="catalog-grid__price">
+                        159 руб/шт
+                    </p>
+                    <div class="catalog-grid__footer">
+                        <div class="counter">
+                            <button class="counter__btn counter__btn_min counter__minus"></button>
+                            <input class="counter__input counter__input_min" type="text" value="0">
+                            <button class="counter__btn counter__btn_min counter__plus"></button>
+                        </div>
+                        <a href="#" class="link link_min">В корзину</a>
+                    </div>
+                </div>
+                <div class="catalog-grid__item">
+                    <div class="catalog-grid__cover">
+                        <img class="catalog-grid__image" src="images/catalog/milk.png" alt="">
+                    </div>
+                    <h3 class="catalog-grid__title">
+                        Молоко топленое
+                    </h3>
+                    <p class="catalog-grid__description">
+                        Молоко Healthy food топленеое мдж&nbsp;4%&nbsp;500гр
+                    </p>
+                    <p class="catalog-grid__price">
+                        159 руб/шт
+                    </p>
+                    <div class="catalog-grid__footer">
+                        <div class="counter">
+                            <button class="counter__btn counter__btn_min counter__minus"></button>
+                            <input class="counter__input counter__input_min" type="text" value="0">
+                            <button class="counter__btn counter__btn_min counter__plus"></button>
+                        </div>
+                        <a href="#" class="link link_min">В корзину</a>
+                    </div>
+                </div>
+            </div>
+            <button class="catalog__btn">Загрузить еще</button> <!--стилизуется как плюс и подробнее-->
+        </div>
+    </main>
+    <section class="delivery">
+        <div class="container">
+
+        </div>
+    </section>
+    <section class="contact">
+        <div class="container">
+            <div class="contact-box">
+                <div class="contact-box__item">
+                    <h1 class="title title_block">
+                        Не смогли
+                        <span class="title__span">определиться?</span>
+                    </h1>
+                    <div class="contact-box__text">
+                        <p>
+                            Если у вас остались вопросы, вы можете задать отправить нам ваши данные. Наши менеджеры свяжутся с вами в течении рабочего дня.
+                        </p>
+                        <ul>
+                            <li>
+                                <a href="tel:+79453425555">+7 945 342 55 55</a>
+                            </li>
+                            <li>
+                                <a href="mailto:+79453425555">healthlyfood@mail.ru</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="contact-box__form">
+                    <div class="card">
+                        <h3 class="card__title">Свяжитесь с нами</h3>
+                        <form>
+                            <label class="card__label">Ваше имя</label>
+                            <input class="card__input" type="text" placeholder="Ваше имя">
+                            <label class="card__label">Ваш телефон</label>
+                            <input class="card__input" type="tel" placeholder="Ваш телефон">
+                            <button type="submit" class="link card__link">Заказать звонок</button>
+                            <p class="card__check">Нажимая на кнопку вы подтверждаете свое согласие на обработку <a href="" class="card__docs">персональных данных</a>.</p>
+                        </form>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
