--- a/src/index.html
+++ b/src/index.html
@@ -198,7 +198,7 @@
     </section>
     <section class="about">
         <div class="container">
-            <h1 class="title title_block">
+            <h1 class="title title_block title__about">
                 В чем наша
                 <span class="title__span">уникальность</span>
             </h1>
@@ -259,25 +259,47 @@
                             </div>
                         </div>
                         <div class="swiper-slide">
+                            <div class="swiper-slide__cover">
+                                <img class="swiper-slide__image" src="images/catalog/egg.png" alt="">
+                            </div>
                             <h3 class="swiper-slide__title">
-                                Бакалея
+                                Яйцо перепелиное
                             </h3>
-                            <div class="swiper-slide__hover">
-                                <p class="swiper-slide__text">
-                                    В наши дни появилась мода на&nbsp;здоровое питание, поэтому на&nbsp;рынке питания разработали органическое молоко. Органическое молоко является продуктом органического животноводства
-                                </p>
-                                <a href="#" class="swiper-slide__link">Подробнее</a>
+                            <p class="swiper-slide__description">
+                                QEGG Яйцо перепелиное 20шт
+                            </p>
+                            <p class="swiper-slide__price">
+                                94 руб/упак
+                            </p>
+                            <div class="swiper-slide__footer">
+                                <div class="counter">
+                                    <button class="counter__btn counter__minus"></button>
+                                    <input class="counter__input" type="text" value="0">
+                                    <button class="counter__btn counter__plus"></button>
+                                </div>
+                                <a href="#" class="link link_max">в корзину</a>
                             </div>
                         </div>
                         <div class="swiper-slide">
+                            <div class="swiper-slide__cover">
+                                <img class="swiper-slide__image" src="images/catalog/chicken.jpg" alt="">
+                            </div>
                             <h3 class="swiper-slide__title">
-                                Мясо, птица
+                                Куриное филе Оссобуко
                             </h3>
-                            <div class="swiper-slide__hover">
-                                <p class="swiper-slide__text">
-                                    В наши дни появилась мода на&nbsp;здоровое питание, поэтому на&nbsp;рынке питания разработали органическое молоко. Органическое молоко является продуктом органического животноводства
-                                </p>
-                                <a href="#" class="swiper-slide__link">Подробнее</a>
+                            <p class="swiper-slide__description">
+                                Куриное филе Оссобуко (Ангус) охл&nbsp;скин. В вакумной уапаковке
+                            </p>
+                            <p class="swiper-slide__price">
+                                1009 руб/кг
+                            </p>
+                            <div class="swiper-slide__footer">
+                                <div class="counter">
+                                    <button class="counter__btn counter__minus"></button>
+                                    <input class="counter__input" type="text" value="0">
+                                    <button class="counter__btn counter__plus"></button>
+                                </div>
+                                <a href="#" class="link link_max">в корзину</a>
                             </div>
                         </div>
                     </div>
@@ -340,13 +362,101 @@
                 </div>
                 <div class="catalog-grid__item">
                     <div class="catalog-grid__cover">
-                        <img class="catalog-grid__image" src="images/catalog/milk.png" alt="">
+                        <img class="catalog-grid__image" src="images/catalog/yogurt.png" alt="">
                     </div>
                     <h3 class="catalog-grid__title">
-                        Молоко топленое
+                        Йогурт с черникой
                     </h3>
                     <p class="catalog-grid__description">
-                        Молоко Healthy food топленеое мдж&nbsp;4%&nbsp;500гр
+                        Йогурт Healthy food  с черникой, питьевой&nbsp;1,5%, 750 г
+                    </p>
+                    <p class="catalog-grid__price">
+                        89 руб/шт
+                    </p>
+                    <div class="catalog-grid__footer">
+                        <div class="counter">
+                            <button class="counter__btn counter__btn_min counter__minus"></button>
+                            <input class="counter__input counter__input_min" type="text" value="0">
+                            <button class="counter__btn counter__btn_min counter__plus"></button>
+                        </div>
+                        <a href="#" class="link link_min">В корзину</a>
+                    </div>
+                </div>
+                <div class="catalog-grid__item">
+                    <div class="catalog-grid__cover">
+                        <img class="catalog-grid__image" src="images/catalog/cottage cheese.png" alt="">
+                    </div>
+                    <h3 class="catalog-grid__title">
+                        Творог
+                    </h3>
+                    <p class="catalog-grid__description">
+                        Творог Healthy food Рассыпчатый <br> 9% 350 г
+                    </p>
+                    <p class="catalog-grid__price">
+                        216 руб/шт
+                    </p>
+                    <div class="catalog-grid__footer">
+                        <div class="counter">
+                            <button class="counter__btn counter__btn_min counter__minus"></button>
+                            <input class="counter__input counter__input_min" type="text" value="0">
+                            <button class="counter__btn counter__btn_min counter__plus"></button>
+                        </div>
+                        <a href="#" class="link link_min">В корзину</a>
+                    </div>
+                </div>
+                <div class="catalog-grid__item">
+                    <div class="catalog-grid__cover">
+                        <img class="catalog-grid__image" src="images/catalog/mozzarella.png" alt="">
+                    </div>
+                    <h3 class="catalog-grid__title">
+                        Моцарелла
+                    </h3>
+                    <p class="catalog-grid__description">
+                        Моцарелла Healthy food <br> 45%, 0.125 кг
+                    </p>
+                    <p class="catalog-grid__price">
+                        359 руб/шт
+                    </p>
+                    <div class="catalog-grid__footer">
+                        <div class="counter">
+                            <button class="counter__btn counter__btn_min counter__minus"></button>
+                            <input class="counter__input counter__input_min" type="text" value="0">
+                            <button class="counter__btn counter__btn_min counter__plus"></button>
+                        </div>
+                        <a href="#" class="link link_min">В корзину</a>
+                    </div>
+                </div>
+                <div class="catalog-grid__item">
+                    <div class="catalog-grid__cover">
+                        <img class="catalog-grid__image" src="images/catalog/butter.png" alt="">
+                    </div>
+                    <h3 class="catalog-grid__title">
+                        Масло сливочное
+                    </h3>
+                    <p class="catalog-grid__description">
+                        Масло Healthy food сливочное 82,5%, 200г
+                    </p>
+                    <p class="catalog-grid__price">
+                        139 руб/шт
+                    </p>
+                    <div class="catalog-grid__footer">
+                        <div class="counter">
+                            <button class="counter__btn counter__btn_min counter__minus"></button>
+                            <input class="counter__input counter__input_min" type="text" value="0">
+                            <button class="counter__btn counter__btn_min counter__plus"></button>
+                        </div>
+                        <a href="#" class="link link_min">В корзину</a>
+                    </div>
+                </div>
+                <div class="catalog-grid__item">
+                    <div class="catalog-grid__cover">
+                        <img class="catalog-grid__image" src="images/catalog/yogurt-termo.png" alt="">
+                    </div>
+                    <h3 class="catalog-grid__title">
+                        Йогурт термостатный
+                    </h3>
+                    <p class="catalog-grid__description">
+                        Йогурт Healthy food термостатный с&nbsp;фруктово-ягодным 2,5 %, 165 г
                     </p>
                     <p class="catalog-grid__price">
                         159 руб/шт
@@ -362,16 +472,16 @@
                 </div>
                 <div class="catalog-grid__item">
                     <div class="catalog-grid__cover">
-                        <img class="catalog-grid__image" src="images/catalog/milk.png" alt="">
+                        <img class="catalog-grid__image" src="images/catalog/cheese.png" alt="">
                     </div>
                     <h3 class="catalog-grid__title">
-                        Молоко топленое
+                        Сыр
                     </h3>
                     <p class="catalog-grid__description">
-                        Молоко Healthy food топленеое мдж&nbsp;4%&nbsp;500гр
+                        Сыр  Healthy food Сливочный <br> 45% 200г
                     </p>
                     <p class="catalog-grid__price">
-                        159 руб/шт
+                        559 руб/шт
                     </p>
                     <div class="catalog-grid__footer">
                         <div class="counter">
@@ -384,104 +494,16 @@
                 </div>
                 <div class="catalog-grid__item">
                     <div class="catalog-grid__cover">
-                        <img class="catalog-grid__image" src="images/catalog/milk.png" alt="">
+                        <img class="catalog-grid__image" src="images/catalog/sauce.png" alt="">
                     </div>
                     <h3 class="catalog-grid__title">
-                        Молоко топленое
+                        Соус для салата
                     </h3>
                     <p class="catalog-grid__description">
-                        Молоко Healthy food топленеое мдж&nbsp;4%&nbsp;500гр
+                        Соус для салата Healthy food пикантыный&nbsp;4%  70гр
                     </p>
                     <p class="catalog-grid__price">
-                        159 руб/шт
-                    </p>
-                    <div class="catalog-grid__footer">
-                        <div class="counter">
-                            <button class="counter__btn counter__btn_min counter__minus"></button>
-                            <input class="counter__input counter__input_min" type="text" value="0">
-                            <button class="counter__btn counter__btn_min counter__plus"></button>
-                        </div>
-                        <a href="#" class="link link_min">В корзину</a>
-                    </div>
-                </div>
-                <div class="catalog-grid__item">
-                    <div class="catalog-grid__cover">
-                        <img class="catalog-grid__image" src="images/catalog/milk.png" alt="">
-                    </div>
-                    <h3 class="catalog-grid__title">
-                        Молоко топленое
-                    </h3>
-                    <p class="catalog-grid__description">
-                        Молоко Healthy food топленеое мдж&nbsp;4%&nbsp;500гр
-                    </p>
-                    <p class="catalog-grid__price">
-                        159 руб/шт
-                    </p>
-                    <div class="catalog-grid__footer">
-                        <div class="counter">
-                            <button class="counter__btn counter__btn_min counter__minus"></button>
-                            <input class="counter__input counter__input_min" type="text" value="0">
-                            <button class="counter__btn counter__btn_min counter__plus"></button>
-                        </div>
-                        <a href="#" class="link link_min">В корзину</a>
-                    </div>
-                </div>
-                <div class="catalog-grid__item">
-                    <div class="catalog-grid__cover">
-                        <img class="catalog-grid__image" src="images/catalog/milk.png" alt="">
-                    </div>
-                    <h3 class="catalog-grid__title">
-                        Молоко топленое
-                    </h3>
-                    <p class="catalog-grid__description">
-                        Молоко Healthy food топленеое мдж&nbsp;4%&nbsp;500гр
-                    </p>
-                    <p class="catalog-grid__price">
-                        159 руб/шт
-                    </p>
-                    <div class="catalog-grid__footer">
-                        <div class="counter">
-                            <button class="counter__btn counter__btn_min counter__minus"></button>
-                            <input class="counter__input counter__input_min" type="text" value="0">
-                            <button class="counter__btn counter__btn_min counter__plus"></button>
-                        </div>
-                        <a href="#" class="link link_min">В корзину</a>
-                    </div>
-                </div>
-                <div class="catalog-grid__item">
-                    <div class="catalog-grid__cover">
-                        <img class="catalog-grid__image" src="images/catalog/milk.png" alt="">
-                    </div>
-                    <h3 class="catalog-grid__title">
-                        Молоко топленое
-                    </h3>
-                    <p class="catalog-grid__description">
-                        Молоко Healthy food топленеое мдж&nbsp;4%&nbsp;500гр
-                    </p>
-                    <p class="catalog-grid__price">
-                        159 руб/шт
-                    </p>
-                    <div class="catalog-grid__footer">
-                        <div class="counter">
-                            <button class="counter__btn counter__btn_min counter__minus"></button>
-                            <input class="counter__input counter__input_min" type="text" value="0">
-                            <button class="counter__btn counter__btn_min counter__plus"></button>
-                        </div>
-                        <a href="#" class="link link_min">В корзину</a>
-                    </div>
-                </div>
-                <div class="catalog-grid__item">
-                    <div class="catalog-grid__cover">
-                        <img class="catalog-grid__image" src="images/catalog/milk.png" alt="">
-                    </div>
-                    <h3 class="catalog-grid__title">
-                        Молоко топленое
-                    </h3>
-                    <p class="catalog-grid__description">
-                        Молоко Healthy food топленеое мдж&nbsp;4%&nbsp;500гр
-                    </p>
-                    <p class="catalog-grid__price">
-                        159 руб/шт
+                        59 руб/шт
                     </p>
                     <div class="catalog-grid__footer">
                         <div class="counter">
