--- a/src/index.html
+++ b/src/index.html
@@ -515,12 +515,36 @@
                     </div>
                 </div>
             </div>
-            <button class="catalog__btn">Загрузить еще</button> <!--стилизуется как плюс и подробнее-->
+            <button class="catalog__btn">Загрузить еще</button> 
         </div>
     </main>
     <section class="delivery">
         <div class="container">
-
+            <h1 class="title">
+                Доставка и
+                <span class="title__span">оплата</span>
+            </h1>
+            <div class="delivery-box">
+                <div class="delivery-box__text">
+                    <p class="description description_size-s delivery__description">
+                        Мы доставляем ваши заказы курьером в специально оборудованном транспорте.
+                    </p>
+                    <p class="description description_size-s delivery__description">
+                        Компания Healthly food предлагает самые удобные и быстрые способы доставки по всей стране. Посмотреть подробные условия и географию вы можете по этой <a class="delivery__link" href="">ссылке</a>
+                    </p>
+                </div>
+                <div class="delivery-box__pay">
+                    <p class="description description_size-s delivery__description">
+                        Вы можете оплатить заказ наличными или картой курьеру, либо&nbsp;воспользоваться функцией онлайн-оплаты и получить <br>
+                        <span class="delivery__price"> скидку&nbsp;5%.</span>
+                    </p>
+                    <ul class="delivery__list">
+                        <li class="delivery__item delivery__item__mc"></li>
+                        <li class="delivery__item delivery__item__visa"></li>
+                        <li class="delivery__item delivery__item__pp"></li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </section>
     <section class="contact">
@@ -535,12 +559,12 @@
                         <p>
                             Если у вас остались вопросы, вы можете задать отправить нам ваши данные. Наши менеджеры свяжутся с вами в течении рабочего дня.
                         </p>
-                        <ul>
-                            <li>
-                                <a href="tel:+79453425555">+7 945 342 55 55</a>
+                        <ul class="contact-box__list">
+                            <li class="contact-box__item">
+                                <a class="contact-box__tel" href="tel:+79453425555">+7 945 342 55 55</a>
                             </li>
-                            <li>
-                                <a href="mailto:+79453425555">healthlyfood@mail.ru</a>
+                            <li class="contact-box__item">
+                                <a class="contact-box__mail" href="mailto:+79453425555">healthlyfood@mail.ru</a>
                             </li>
                         </ul>
                     </div>
